--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="lib" path="scalatest_2.12-3.0.4.jar"/>
+	<classpathentry kind="lib" path="scala-swing_2.12-2.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
