--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="lib" path="scalatest_2.12-3.0.4.jar"/>
 	<classpathentry kind="lib" path="scala-swing_2.12-2.1.0.jar"/>
+	<classpathentry kind="lib" path="scala-xml_2.12-1.0.6.jar"/>
+	<classpathentry kind="lib" path="scalactic_2.12-3.0.4.jar"/>
+	<classpathentry kind="lib" path="scalamock_2.12-4.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
